# Number_Manipulation

./: Q18.py  Q44.py  Q81.py  pyproject.toml
numer_manip/: pyproject.toml
numer_manip/tests/: test_numer_manip.py
