[tool.poetry]
name = "number_manipulation"
version = "0.1.0"
description = "Solve questions from Project Euler related to number manipulation"
authors = ["Jonathan Chow"]

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
